# django-telegram-shop

./: pyproject.toml
django_telegram_shop/: manage.py  populate.py
django_telegram_shop/django_telegram_shop/: asgi.py  settings.py  urls.py  wsgi.py
django_telegram_shop/features/: environment.py  mitmmock_replay.py  user_interaction.feature
django_telegram_shop/shop/: admin.py  mock.py
django_telegram_shop/shop/models/: __init__.py  buyer.py  cart.py  sale.py
